<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <include
        android:id="@+id/topNav"
        layout="@layout/common_title" />


    <RadioGroup
        android:id="@+id/tabIndicators"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:paddingTop="3dp"
        android:paddingBottom="3dp"
        android:background="@drawable/d_color_radio_button_boder"
        android:checkedButton="@+id/tabIndexButton"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/tabIndexButton"
            style="@style/MainTabButton"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/d_index_radio_button"
            android:text="@string/tab_index" />

        <RadioButton
            android:id="@+id/tabIndicatorButton"
            style="@style/MainTabButton"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/d_indicator_radio_button"
            android:text="@string/tab_indicator" />

        <RadioButton
            android:id="@+id/tabConsultationButton"
            style="@style/MainTabButton"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/d_notice_radio_button"
            android:text="@string/tab_notice" />

        <RadioButton
            android:id="@+id/UserButton"
            style="@style/MainTabButton"
            android:layout_height="wrap_content"
            android:drawableTop="@drawable/d_user_radio_button"
            android:text="@string/tab_user" />
    </RadioGroup>

    <FrameLayout
        android:id="@+id/fragment_container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/tabIndicators"
        android:layout_below="@id/topNav"
        android:orientation="vertical" />

</RelativeLayout>