<com.lilosoft.easygov.widget.SpringScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fresco="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main_bg"
    >
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/color_main_bg"
    android:orientation="vertical"
    tools:context=".fragment.PersonalCenterFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="180dp"
        android:background="@mipmap/bg_top_user">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:drawablePadding="10dp"
            android:drawableTop="@mipmap/bg_user_big"
            android:gravity="center"
            android:text="@string/personal_not_login_string"
            android:textColor="@color/white"
            android:textSize="16sp" />
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/icon1"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/personal_info_string" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:src="@mipmap/arrow_right"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/icon2"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/personal_msg_string" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:src="@mipmap/arrow_right"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!--分割线-->
<ImageView
    android:layout_width="match_parent"
    android:background="@color/white"
    android:src="@drawable/bg_line"
    android:paddingLeft="50dp"
    android:layout_height="0.6dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/icon3"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/personal_history_string" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:src="@mipmap/arrow_right"
            android:layout_height="wrap_content" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:layout_marginTop="10dp"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/icon4"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/personal_collection_string" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:src="@mipmap/arrow_right"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!--分割线-->
    <ImageView
        android:layout_width="match_parent"
        android:background="@color/white"
        android:src="@drawable/bg_line"
        android:paddingLeft="45dp"
        android:layout_height="0.6dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/icon5"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/personal_feebback_string" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:src="@mipmap/arrow_right"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <!--分割线-->
    <ImageView
        android:layout_width="match_parent"
        android:background="@color/white"
        android:src="@drawable/bg_line"
        android:paddingLeft="50dp"
        android:layout_height="0.6dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:background="@color/white"
        android:paddingLeft="10dp"
        android:paddingRight="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableLeft="@mipmap/icon6"
            android:drawablePadding="10dp"
            android:gravity="center"
            android:textSize="16sp"
            android:text="@string/personal_loginout_string" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content" />
        <ImageView
            android:layout_gravity="center_vertical"
            android:layout_width="wrap_content"
            android:src="@mipmap/arrow_right"
            android:layout_height="wrap_content" />
    </LinearLayout>
</LinearLayout>
    </com.lilosoft.easygov.widget.SpringScrollView>